descomplicando_kubernetes/kind/certmanager/ingress-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
      #nginx.ingress.kubernetes.io/auth-type: "basic"
      #nginx.ingress.kubernetes.io/auth-secret: "giropops-senhas-users"
      #nginx.ingress.kubernetes.io/auth-realm: "Autenticação Necessaria!"  
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - giropops.975050157312.realhandsonlabs.net
    secretName: giropops-container-expert-tls
  rules:
  - host: giropops.975050157312.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas-svc
            port:
              number: 5000
